WIP, migration influxDb 2 (& flux)