@@ -1,9 +1,18 @@
 package io.vertigo.chatbot.designer.analytics.services;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+
 import javax.inject.Inject;
 
+import io.vertigo.chatbot.designer.analytics.utils.AnalyticsServicesUtils;
+import io.vertigo.chatbot.designer.analytics.utils.InfluxRequestBuilder;
+import io.vertigo.chatbot.designer.analytics.utils.InfluxRequestUtil;
 import io.vertigo.chatbot.designer.domain.analytics.StatCriteria;
 import io.vertigo.commons.transaction.Transactional;
+import io.vertigo.connectors.influxdb.InfluxDbConnector;
 import io.vertigo.core.node.component.Activeable;
 import io.vertigo.core.node.component.Component;
 import io.vertigo.core.param.ParamManager;
@@ -21,8 +30,11 @@ public class TimeSerieServices implements Component, Activeable {
 
 	private String influxDbName;
 
-	//	@Inject
-	//	private TimeSeriesManager timeSeriesManager;
+	//@Inject
+	//private TimeSeriesManager timeSeriesManager;
+
+	@Inject
+	private InfluxDbConnector influxDbConnector;
 
 	@Inject
 	private ParamManager paramManager;
@@ -30,7 +42,6 @@ public class TimeSerieServices implements Component, Activeable {
 	@Override
 	public void start() {
 		influxDbName = paramManager.getParam("boot.ANALYTICA_DBNAME").getValueAsString();
-
 	}
 
 	@Override
@@ -46,10 +57,10 @@ public class TimeSerieServices implements Component, Activeable {
 	 * @return sum of sessions
 	 */
 	public TimedDatas getSessionsStats(final StatCriteria criteria) {
-		return null;
-		//return timeSeriesManager.getTimeSeries(influxDbName, Arrays.asList("isSessionStart:sum"),
-		//		AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT).build(),
-		//		AnalyticsServicesUtils.getTimeFilter(criteria));
+		return InfluxRequestUtil.getTimeSeries(influxDbConnector.getClient(), influxDbName, Arrays.asList("isSessionStart:sum"),
+				AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT).build(),
+				Map.of(),
+				AnalyticsServicesUtils.getTimeFilter(criteria));
 	}
 
 	/**
@@ -59,11 +70,11 @@ public class TimeSerieServices implements Component, Activeable {
 	 * @return timeDatas with messages sum and fallbacksum
 	 */
 	public TimedDatas getRequestStats(final StatCriteria criteria) {
-		return null;
-		//return timeSeriesManager.getTimeSeries(influxDbName, Arrays.asList("name:count", "isFallback:sum", "isNlu:sum"),
-		//				AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT).withAdditionalWhereClause("isUserMessage = 1").build(),
-		//	AnalyticsServicesUtils.getTimeFilter(criteria));
-
+		return InfluxRequestUtil.getTimeSeries(influxDbConnector.getClient(), influxDbName, Arrays.asList("name:count", "isFallback:sum", "isNlu:sum"),
+				AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT)
+						.build(),
+				Map.of("isUserMessage", "1"),
+				AnalyticsServicesUtils.getTimeFilter(criteria));
 	}
 
 	public TimedDatas getUserInteractions(final StatCriteria criteria) {
@@ -80,11 +91,16 @@ public class TimeSerieServices implements Component, Activeable {
 	 * @return all the messages unrecognized
 	 */
 	public TimedDatas getSentenceDetails(final StatCriteria criteria) {
-		return null;
-		//		return timeSeriesManager.getFlatTabularTimedData(influxDbName, Arrays.asList("text", "name", "confidence", "modelName"),
-		//				AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT).withAdditionalWhereClause("isFallback = 1").build(),
-		//				AnalyticsServicesUtils.getTimeFilter(criteria),
-		//				Optional.empty());
+		final String q = new InfluxRequestBuilder(influxDbName)
+				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
+				.filterFields(AnalyticsServicesUtils.MESSAGES_MSRMT, List.of("confidence", "isFallback"))
+				.filterColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
+				.keep(List.of("_time", "text", "name", "modelName", "_field", "_value"))
+				.pivot()
+				.filterColumn(Map.of("isFallback", "1"))
+				.build();
+
+		return InfluxRequestUtil.executeTimedQuery(influxDbConnector.getClient(), q);
 	}
 
 	/**
@@ -94,11 +110,16 @@ public class TimeSerieServices implements Component, Activeable {
 	 * @return all the messages unrecognized
 	 */
 	public TimedDatas getSessionsExport(final StatCriteria criteria) {
-		return null;
-		//return timeSeriesManager.getFlatTabularTimedData(influxDbName, Arrays.asList("name", "modelName", "botId", "traId"),
-		//		AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT).withAdditionalWhereClause("isSessionStart = 1").build(),
-		//		AnalyticsServicesUtils.getTimeFilter(criteria),
-		//		Optional.empty());
+		final String q = new InfluxRequestBuilder(influxDbName)
+				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
+				.filterFields(AnalyticsServicesUtils.MESSAGES_MSRMT, List.of("isSessionStart"))
+				.filterColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
+				.keep(List.of("_time", "name", "modelName", "botId", "traId", "_field", "_value"))
+				.pivot()
+				.filterColumn(Map.of("isSessionStart", "1"))
+				.build();
+
+		return InfluxRequestUtil.executeTimedQuery(influxDbConnector.getClient(), q);
 	}
 
 	/**
@@ -108,11 +129,16 @@ public class TimeSerieServices implements Component, Activeable {
 	 * @return all the messages unrecognized
 	 */
 	public TimedDatas getUnknowSentenceExport(final StatCriteria criteria) {
-		return null;
-		//		return timeSeriesManager.getFlatTabularTimedData(influxDbName, Arrays.asList("text", "name", "confidence", "modelName", "botId", "traId"),
-		//		AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT).withAdditionalWhereClause("isFallback = 1").build(),
-		//		AnalyticsServicesUtils.getTimeFilter(criteria),
-		//		Optional.empty());
+		final String q = new InfluxRequestBuilder(influxDbName)
+				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
+				.filterFields(AnalyticsServicesUtils.MESSAGES_MSRMT, List.of("isSessionStart"))
+				.filterColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
+				.keep(List.of("_time", "text", "name", "confidence", "modelName", "botId", "traId", "_field", "_value"))
+				.pivot()
+				.filterColumn(Map.of("isFallback", "1"))
+				.build();
+
+		return InfluxRequestUtil.executeTimedQuery(influxDbConnector.getClient(), q);
 	}
 
 	/**
@@ -123,16 +149,19 @@ public class TimeSerieServices implements Component, Activeable {
 	 * @return all topIntents
 	 */
 	public TabularDatas getAllTopIntents(final StatCriteria criteria) {
-		return null;
-		//return timeSeriesManager.getTabularData(influxDbName, Arrays.asList("name:count"),
-		//		AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT)
-		//				.withAdditionalWhereClause("isNlu = 1")
-		//No technical issues must be get
-		//				.withAdditionalWhereClause("isTechnical = 0")
-		//				.build(),
-		//		AnalyticsServicesUtils.getTimeFilter(criteria),
-		//		"name");
+		final String q = new InfluxRequestBuilder(influxDbName)
+				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
+				.filterFields(AnalyticsServicesUtils.MESSAGES_MSRMT, List.of("isNlu", "isTechnical"))
+				.filterColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
+				.keep(List.of("_time", "name", "_field", "_value"))
+				.pivot()
+				.filterColumn(Map.of("isNlu", "1", "isTechnical", "0"))
+				.keep(List.of("name"))
+				.append("|> duplicate(column: \"name\", as: \"name:count\")")
+				.append("|> count(column: \"name:count\")")
+				.build();
 
+		return InfluxRequestUtil.executeTabularQuery(influxDbConnector.getClient(), q);
 	}
 
 	/**
@@ -143,14 +172,18 @@ public class TimeSerieServices implements Component, Activeable {
 	 * @return all the sentences recognized
 	 */
 	public TimedDatas getKnowSentence(final StatCriteria criteria, final String intentRasa) {
-		return null;
-		//return timeSeriesManager.getFlatTabularTimedData(influxDbName, Arrays.asList("text", "name", "confidence"),
-		//		AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT)
-		//				.addFilter("name", intentRasa)
-		//				.withAdditionalWhereClause("isNlu = 1")
-		//				.build(),
-		//		AnalyticsServicesUtils.getTimeFilter(criteria),
-		//		Optional.of(5000L));
+		final String q = new InfluxRequestBuilder(influxDbName)
+				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
+				.filterFields(AnalyticsServicesUtils.MESSAGES_MSRMT, List.of("isNlu", "confidence"))
+				.filterColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
+				.filterColumn(Map.of("name", '"' + intentRasa + '"'))
+				.keep(List.of("_time", "text", "_field", "_value"))
+				.pivot()
+				.filterColumn(Map.of("isNlu", "1"))
+				.keep(List.of("_time", "text", "confidence"))
+				.build(5_000L);
+
+		return InfluxRequestUtil.executeTimedQuery(influxDbConnector.getClient(), q);
 	}
 
 	/**
@@ -160,7 +193,7 @@ public class TimeSerieServices implements Component, Activeable {
 	 * @return all topics used at least one time
 	 */
 	public TimedDatas getTopicsStats(final StatCriteria criteria) {
-		return null;
+		return new TimedDatas(new ArrayList<>(), new ArrayList<>());
 		//return timeSeriesManager.getFlatTabularTimedData(influxDbName, Arrays.asList("name"),
 		//		AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT).build(),
 		//		AnalyticsServicesUtils.getTimeFilter(criteria),
@@ -168,11 +201,11 @@ public class TimeSerieServices implements Component, Activeable {
 	}
 
 	public TimedDatas getRatingStats(final StatCriteria criteria) {
-		return null;
-		//return timeSeriesManager.getTimeSeries(influxDbName,
-		//		Arrays.asList("rating1:count", "rating2:count", "rating3:count", "rating4:count", "rating5:count"),
-		//		AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.RATING_MSRMT).build(),
-		//		AnalyticsServicesUtils.getTimeFilter(criteria));
+		return InfluxRequestUtil.getTimeSeries(influxDbConnector.getClient(), influxDbName,
+				Arrays.asList("rating1:count", "rating2:count", "rating3:count", "rating4:count", "rating5:count"),
+				AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.RATING_MSRMT).build(),
+				Map.of(),
+				AnalyticsServicesUtils.getTimeFilter(criteria));
 	}
 
 }
